--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	</head>
 	<body style="display: grid;">
 	<div style="display: grid; margin: 0 auto;">
-		<h1 style="text-align: center; font-family: Open Sans, sans; font-size: 5em;">Under Construction</h1>
+		<h1 style="text-align: center; font-family: Open Sans, Helvetica, sans-serif; font-size: 5em;">Under Construction</h1>
 		<img style="margin: auto; width: 50%;" src="donut.png"/>
 	</div>
 	</body>
